--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -15,13 +15,13 @@ en: &DEFAULT_EN
   menu_label                 : "Toggle menu"
   search_label               : "Toggle search"
   toc_label                  : "On this page"
-  ext_link_label             : "Direct link"
+  ext_link_label             : "Source"
   less_than                  : "less than"
   minute_read                : "minute read"
   share_on_label             : "Share on"
   meta_label                 :
   tags_label                 : "Tags:"
-  categories_label           : "Categories:"
+  categories_label           : "Category:"
   date_label                 : "Updated:"
   comments_label             : "Leave a comment"
   comments_title             : "Comments"
@@ -32,7 +32,7 @@ en: &DEFAULT_EN
   powered_by                 : "Powered by"
   website_label              : "Website"
   email_label                : "Email"
-  recent_posts               : "Recent posts"
+  recent_posts               : "Latest posts"
   undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
   comment_form_info          : "Your email address will not be published. Required fields are marked"
   comment_form_comment_label : "Comment"
